// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component Should Exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "List": Object {
    "$$typeof": Symbol(react.forward_ref),
    "Item": Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "active": false,
        "backgroundColor": undefined,
        "children": null,
        "className": "",
        "clearfix": undefined,
        "clipped": undefined,
        "hidden": undefined,
        "invisible": undefined,
        "italic": undefined,
        "marginless": undefined,
        "overlay": undefined,
        "paddingless": undefined,
        "pull": undefined,
        "radiusless": undefined,
        "renderAs": "a",
        "responsive": undefined,
        "shadowless": undefined,
        "textAlignment": undefined,
        "textColor": undefined,
        "textSize": undefined,
        "textTransform": undefined,
        "textWeight": undefined,
        "unselectable": undefined,
      },
      "propTypes": Object {
        "active": [Function],
        "backgroundColor": [Function],
        "children": [Function],
        "className": [Function],
        "clearfix": [Function],
        "clipped": [Function],
        "hidden": [Function],
        "invisible": [Function],
        "italic": [Function],
        "marginless": [Function],
        "overlay": [Function],
        "paddingless": [Function],
        "pull": [Function],
        "radiusless": [Function],
        "renderAs": [Function],
        "responsive": [Function],
        "shadowless": [Function],
        "textAlignment": [Function],
        "textColor": [Function],
        "textSize": [Function],
        "textTransform": [Function],
        "textWeight": [Function],
        "unselectable": [Function],
      },
      "render": [Function],
    },
    "defaultProps": Object {
      "backgroundColor": undefined,
      "className": "",
      "clearfix": undefined,
      "clipped": undefined,
      "hidden": undefined,
      "invisible": undefined,
      "italic": undefined,
      "marginless": undefined,
      "overlay": undefined,
      "paddingless": undefined,
      "pull": undefined,
      "radiusless": undefined,
      "responsive": undefined,
      "shadowless": undefined,
      "textAlignment": undefined,
      "textColor": undefined,
      "textSize": undefined,
      "textTransform": undefined,
      "textWeight": undefined,
      "title": null,
      "unselectable": undefined,
    },
    "propTypes": Object {
      "backgroundColor": [Function],
      "className": [Function],
      "clearfix": [Function],
      "clipped": [Function],
      "hidden": [Function],
      "invisible": [Function],
      "italic": [Function],
      "marginless": [Function],
      "overlay": [Function],
      "paddingless": [Function],
      "pull": [Function],
      "radiusless": [Function],
      "responsive": [Function],
      "shadowless": [Function],
      "textAlignment": [Function],
      "textColor": [Function],
      "textSize": [Function],
      "textTransform": [Function],
      "textWeight": [Function],
      "title": [Function],
      "unselectable": [Function],
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "backgroundColor": undefined,
    "className": "",
    "clearfix": undefined,
    "clipped": undefined,
    "hidden": undefined,
    "invisible": undefined,
    "italic": undefined,
    "marginless": undefined,
    "overlay": undefined,
    "paddingless": undefined,
    "pull": undefined,
    "radiusless": undefined,
    "renderAs": "aside",
    "responsive": undefined,
    "shadowless": undefined,
    "textAlignment": undefined,
    "textColor": undefined,
    "textSize": undefined,
    "textTransform": undefined,
    "textWeight": undefined,
    "unselectable": undefined,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Menu component Should accept a react Element as renderAs prop 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <span>
        Custom
        Dashboard
      </span>
    </li>
    <li>
      <span>
        Custom
        Customer
      </span>
    </li>
  </ul>
</aside>
`;

exports[`Menu component Should concat Menu.List to display as submenus 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <a>
        Dashboard
      </a>
    </li>
    <li>
      <li>
        <a
          className="is-active"
        >
          Manage Your Team
        </a>
        <ul
          className="menu-list"
        >
          <li>
            <a>
              Members
            </a>
          </li>
          <li>
            <a
              className="is-active"
            >
              Plugins
            </a>
          </li>
          <li>
            <a>
              Add a member
            </a>
          </li>
        </ul>
      </li>
    </li>
  </ul>
</aside>
`;

exports[`Menu component Should have menu classnames 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <a>
        Dashboard
      </a>
    </li>
    <li>
      <a>
        Customer
      </a>
    </li>
  </ul>
</aside>
`;

exports[`Menu component Should render custom item child 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <p>
        Custom children 1
      </p>
    </li>
    <li>
      <a>
        Custom children 2
      </a>
    </li>
  </ul>
</aside>
`;
